CK-382: fixed align for message sent

--- a/res/css/views/rooms/_EventTile.scss
+++ b/res/css/views/rooms/_EventTile.scss
@@ -27,7 +27,9 @@ limitations under the License.
 
   & .mx_EventTile_line {
     margin: 0;
-    text-align: right;
+    text-align: left;
+    float: right;
+    display: block;
     margin-left: 110px;
   }
   & .mx_SenderProfile {
@@ -333,9 +335,6 @@ div.mx_EventTile_notSent.mx_EventTile_redacted .mx_UnknownBody {
 /* De-zalgoing */
 .mx_EventTile_body {
   overflow-y: hidden;
-    text-align: left;
-    display: block;
-    float: right;
 }
 
 .mx_EventTile_e2eIcon {
